--- a/ai_chat/templates/ai_chat/chat_window.html
+++ b/ai_chat/templates/ai_chat/chat_window.html
@@ -84,6 +84,10 @@
         </div>
     </div>
 
+    <script>
+        // Pass Django settings to JavaScript
+        window.AI_CHAT_WEBSOCKET_URL = '{{ websocket_url|default:"" }}';
+    </script>
     <script src="{% static 'ai_chat/js/chat.js' %}"></script>
 </body>
 </html>
